fix elobar jump issue,  keep same ux as chess.com

--- a/styles/chess.css
+++ b/styles/chess.css
@@ -51,7 +51,7 @@
 } */
 
 .elo-value {
-  transition: height 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: height 1s cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #d3d7da;
 }
 
@@ -66,14 +66,13 @@
   position: absolute;
   bottom: 0;
   font-weight: 600;
-  left: 8px;
+  left: 2px;
   bottom: -20px;
 }
 
-.elo-bar-reverse {
+.view-as-white {
   background-color: #d3d7da !important;
 }
-
-.elo-bar-reverse .elo-value {
+.view-as-white .elo-value {
   background-color: #404040;
 }
